export const snapshot = {};

snapshot[`unknown path → E2001 1`] = `
[
  {
    attribution: {
      confidence: 0.7,
      reasoning: [
        'No path definition matches "/nonexistent"',
      ],
    },
    category: "sdk-issue",
    code: "E2001",
    message: "Path not found: /nonexistent",
    requestPath: "/nonexistent",
    severity: "error",
    specPointer: "GET /nonexistent",
    suggestion: "Available paths: /oas.json, /accounts, /accounts/{account_id}, /accounts/{account_id}/link, /accounts/{account_id}/friends...",
  },
]
`;

snapshot[`wrong method → E2002 1`] = `
[
  {
    attribution: {
      confidence: 0.7,
      reasoning: [
        'Path "/accounts" matched, but method DELETE is not defined',
      ],
    },
    category: "sdk-issue",
    code: "E2002",
    message: "Method DELETE not allowed for /accounts",
    requestPath: "/accounts",
    severity: "error",
    specPointer: "DELETE /accounts",
    suggestion: 'Available methods for "/accounts": GET, POST',
  },
]
`;

snapshot[`POST /accounts with empty body → missing required field 1`] = `
[
  {
    actual: undefined,
    attribution: {
      confidence: 1,
      reasoning: [
        "Missing required field in body at body",
        "Field 'name' is in the schema's required array",
        "Request body did not include 'name'",
      ],
    },
    category: "sdk-issue",
    code: "E3007",
    display: {
      context: [
        {
          highlight: {
            end: 17,
            label: "Missing from request",
            start: 11,
          },
          text: 'required: ["name"]',
        },
      ],
    },
    expected: "name",
    message: "Missing required property: name",
    requestPath: "body",
    severity: "error",
    specPointer: "#/components/schemas/Account",
  },
]
`;

snapshot[`POST /accounts with wrong type → E3008 1`] = `
[
  {
    actual: "number",
    attribution: {
      confidence: 1,
      reasoning: [
        "Type mismatch in body at body.name",
        'Schema requires type "string"',
        "Request sent number",
      ],
    },
    category: "sdk-issue",
    code: "E3008",
    display: {
      context: [
        {
          highlight: {
            end: 13,
            label: "Expected type",
            start: 7,
          },
          text: 'type: "string"',
        },
      ],
    },
    expected: "string",
    message: "Expected type string, got number",
    requestPath: "body.name",
    severity: "error",
    specPointer: "#/components/schemas/Account/properties/name",
  },
]
`;

snapshot[`POST /accounts with invalid enum → E3016 1`] = `
[
  {
    actual: "INVALID",
    attribution: {
      confidence: 1,
      reasoning: [
        "Enum value mismatch at body.plan",
        'Allowed values: ["FREE","PREMIUM"]',
        'Request sent "INVALID"',
      ],
    },
    category: "sdk-issue",
    code: "E3016",
    display: {
      context: [
        {
          highlight: {
            end: 24,
            label: 'Value "INVALID" not in allowed list',
            start: 0,
          },
          text: 'enum: ["FREE","PREMIUM"]',
        },
      ],
    },
    expected: [
      "FREE",
      "PREMIUM",
    ],
    message: 'Value "INVALID" is not in allowed values',
    requestPath: "body.plan",
    severity: "error",
    specPointer: "#/components/schemas/Account/properties/plan",
  },
]
`;

snapshot[`POST /accounts with invalid nested address → errors at nested path 1`] = `
[
  {
    actual: undefined,
    attribution: {
      confidence: 1,
      reasoning: [
        "Missing required field in body at body.address",
        "Field 'address1' is in the schema's required array",
        "Request body did not include 'address1'",
      ],
    },
    category: "sdk-issue",
    code: "E3007",
    display: {
      context: [
        {
          highlight: {
            end: 21,
            label: "Missing from request",
            start: 11,
          },
          text: 'required: ["address1","city","country","postal_code","state"]',
        },
      ],
    },
    expected: "address1",
    message: "Missing required property: address1",
    requestPath: "body.address",
    severity: "error",
    specPointer: "#/components/schemas/Address",
  },
  {
    actual: undefined,
    attribution: {
      confidence: 1,
      reasoning: [
        "Missing required field in body at body.address",
        "Field 'country' is in the schema's required array",
        "Request body did not include 'country'",
      ],
    },
    category: "sdk-issue",
    code: "E3007",
    display: {
      context: [
        {
          highlight: {
            end: 38,
            label: "Missing from request",
            start: 29,
          },
          text: 'required: ["address1","city","country","postal_code","state"]',
        },
      ],
    },
    expected: "country",
    message: "Missing required property: country",
    requestPath: "body.address",
    severity: "error",
    specPointer: "#/components/schemas/Address",
  },
  {
    actual: undefined,
    attribution: {
      confidence: 1,
      reasoning: [
        "Missing required field in body at body.address",
        "Field 'postal_code' is in the schema's required array",
        "Request body did not include 'postal_code'",
      ],
    },
    category: "sdk-issue",
    code: "E3007",
    display: {
      context: [
        {
          highlight: {
            end: 52,
            label: "Missing from request",
            start: 39,
          },
          text: 'required: ["address1","city","country","postal_code","state"]',
        },
      ],
    },
    expected: "postal_code",
    message: "Missing required property: postal_code",
    requestPath: "body.address",
    severity: "error",
    specPointer: "#/components/schemas/Address",
  },
  {
    actual: undefined,
    attribution: {
      confidence: 1,
      reasoning: [
        "Missing required field in body at body.address",
        "Field 'state' is in the schema's required array",
        "Request body did not include 'state'",
      ],
    },
    category: "sdk-issue",
    code: "E3007",
    display: {
      context: [
        {
          highlight: {
            end: 60,
            label: "Missing from request",
            start: 53,
          },
          text: 'required: ["address1","city","country","postal_code","state"]',
        },
      ],
    },
    expected: "state",
    message: "Missing required property: state",
    requestPath: "body.address",
    severity: "error",
    specPointer: "#/components/schemas/Address",
  },
  {
    actual: "number",
    attribution: {
      confidence: 1,
      reasoning: [
        "Type mismatch in body at body.address.city",
        'Schema requires type "string"',
        "Request sent number",
      ],
    },
    category: "sdk-issue",
    code: "E3008",
    display: {
      context: [
        {
          highlight: {
            end: 13,
            label: "Expected type",
            start: 7,
          },
          text: 'type: "string"',
        },
      ],
    },
    expected: "string",
    message: "Expected type string, got number",
    requestPath: "body.address.city",
    severity: "error",
    specPointer: "#/components/schemas/Address/properties/city",
  },
]
`;

snapshot[`POST /accounts/{id}/link with wrong variant data → errors 1`] = `
[
  {
    actual: undefined,
    attribution: {
      confidence: 0.95,
      reasoning: [
        'Discriminator "type" selected variant 0',
        "Missing required field in body at body",
        "Field 'google_account_id' is in the schema's required array",
        "Request body did not include 'google_account_id'",
      ],
    },
    category: "sdk-issue",
    code: "E3007",
    display: {
      context: [
        {
          highlight: {
            end: 37,
            label: "Missing from request",
            start: 18,
          },
          text: 'required: ["type","google_account_id"]',
        },
      ],
    },
    expected: "google_account_id",
    message: "Missing required property: google_account_id",
    requestPath: "body",
    severity: "error",
    specPointer: "#/components/schemas/AccountLink/oneOf/0",
  },
]
`;

snapshot[`multiple errors: wrong type + invalid enum 1`] = `
[
  {
    actual: "number",
    attribution: {
      confidence: 1,
      reasoning: [
        "Type mismatch in body at body.name",
        'Schema requires type "string"',
        "Request sent number",
      ],
    },
    category: "sdk-issue",
    code: "E3008",
    display: {
      context: [
        {
          highlight: {
            end: 13,
            label: "Expected type",
            start: 7,
          },
          text: 'type: "string"',
        },
      ],
    },
    expected: "string",
    message: "Expected type string, got number",
    requestPath: "body.name",
    severity: "error",
    specPointer: "#/components/schemas/Account/properties/name",
  },
  {
    actual: "INVALID",
    attribution: {
      confidence: 1,
      reasoning: [
        "Enum value mismatch at body.plan",
        'Allowed values: ["FREE","PREMIUM"]',
        'Request sent "INVALID"',
      ],
    },
    category: "sdk-issue",
    code: "E3016",
    display: {
      context: [
        {
          highlight: {
            end: 24,
            label: 'Value "INVALID" not in allowed list',
            start: 0,
          },
          text: 'enum: ["FREE","PREMIUM"]',
        },
      ],
    },
    expected: [
      "FREE",
      "PREMIUM",
    ],
    message: 'Value "INVALID" is not in allowed values',
    requestPath: "body.plan",
    severity: "error",
    specPointer: "#/components/schemas/Account/properties/plan",
  },
  {
    actual: "UNKNOWN",
    attribution: {
      confidence: 1,
      reasoning: [
        "Enum value mismatch at body.state",
        'Allowed values: ["ACTIVE","PAUSED"]',
        'Request sent "UNKNOWN"',
      ],
    },
    category: "sdk-issue",
    code: "E3016",
    display: {
      context: [
        {
          highlight: {
            end: 25,
            label: 'Value "UNKNOWN" not in allowed list',
            start: 0,
          },
          text: 'enum: ["ACTIVE","PAUSED"]',
        },
      ],
    },
    expected: [
      "ACTIVE",
      "PAUSED",
    ],
    message: 'Value "UNKNOWN" is not in allowed values',
    requestPath: "body.state",
    severity: "error",
    specPointer: "#/components/schemas/Account/properties/state",
  },
]
`;
